--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -9,7 +9,7 @@
     "# your file to cut\n",
     "pdf_path = 'books/Principles_of_Microeconomics.txt'\n",
     "# chosen model, make sure you have downloaded it using ollama\n",
-    "DEFAULT_MODEL = \"llama3.2:1b\""
+    "DEFAULT_MODEL_USE = \"llama3.2:1b\""
    ]
   },
   {
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preliminary: Call LLM Model using Ollama"
+    "### Preliminary: Call LLM Model using Ollama Service"
    ]
   },
   {
@@ -297,14 +297,14 @@
     "    \n",
     "    return chunks\n",
     "\n",
-    "def process_chunk(text_chunk, chunk_num):\n",
+    "def process_each_chunk(text_chunk, chunk_num):\n",
     "    \"\"\"Process a chunk of text and return both input and output for verification\"\"\"\n",
     "    conversation = [\n",
     "        {\"role\": \"system\", \"content\": SYS_PROMPT},\n",
     "        {\"role\": \"user\", \"content\": text_chunk},\n",
     "    ]\n",
     "\n",
-    "    processed_text = llm_call(DEFAULT_MODEL,conversation,temperature=0.5)\n",
+    "    processed_text = llm_call(DEFAULT_MODEL_USE,conversation,temperature=0.5)\n",
     "    \n",
     "   \n",
     "    # Print chunk information for monitoring\n",
@@ -349,7 +349,7 @@
     "\n",
     "    for chunk_num, chunk in enumerate(tqdm(chunks, desc=\"Processing chunks\")):\n",
     "        # Process chunk and append to complete text\n",
-    "        processed_chunk = process_chunk(chunk, chunk_num)\n",
+    "        processed_chunk = process_each_chunk(chunk, chunk_num)\n",
     "        processed_text += processed_chunk + \"\\n\"\n",
     "        # Write chunk immediately to file\n",
     "        out_file.write(processed_chunk + \"\\n\")\n",
@@ -546,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
