--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -9,7 +9,10 @@
     "# your file to cut\n",
     "pdf_path = 'books/Principles_of_Microeconomics.txt'\n",
     "# chosen model, make sure you have downloaded it using ollama\n",
-    "DEFAULT_MODEL = \"llama3.2:1b\""
+    "DEFAULT_MODEL = \"llama3.2:1b\"\n",
+    "##########\n",
+    "# 1. Pre-Process PDF to Text\n",
+    "##########"
    ]
   },
   {
@@ -34,6 +37,7 @@
     "import PyPDF2\n",
     "from typing import Optional\n",
     "import os\n",
+    "import re\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
     "import warnings\n",
@@ -528,6 +532,33 @@
    "source": [
     "merge_tocs_and_chapters('chapters', 'merged_chapters')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -546,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
